--- a/aws-step-functions/package.json
+++ b/aws-step-functions/package.json
@@ -14,14 +14,16 @@
     "@aws-cdk/assert": "1.94.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.91.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.91.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda": "^1.94.1",
+    "@aws-cdk/aws-sns": "^1.94.1",
+    "@aws-cdk/aws-sns-subscriptions": "^1.94.1",
     "@aws-cdk/aws-stepfunctions": "^1.94.1",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.94.1",
     "@aws-cdk/core": "^1.94.1",
