--- a/aws-step-functions-search-byron/package.json
+++ b/aws-step-functions-search-byron/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aws-step-functions",
+  "name": "aws-step-functions-search-byron",
   "version": "0.1.0",
   "bin": {
-    "aws-step-functions": "bin/aws-step-functions.js"
+    "aws-step-functions-search-byron": "bin/aws-step-functions-search-byron.js"
   },
   "scripts": {
     "build": "tsc",
@@ -14,21 +14,18 @@
     "@aws-cdk/assert": "1.94.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.91.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
+    "aws-cdk": "1.94.1",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.94.1",
-    "@aws-cdk/aws-iam": "^1.94.1",
     "@aws-cdk/aws-lambda": "^1.94.1",
-    "@aws-cdk/aws-sns": "^1.94.1",
-    "@aws-cdk/aws-sns-subscriptions": "^1.94.1",
     "@aws-cdk/aws-stepfunctions": "^1.94.1",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.94.1",
-    "@aws-cdk/core": "^1.94.1",
+    "@aws-cdk/core": "1.94.1",
     "source-map-support": "^0.5.16"
   }
 }
