start with DynamoDB DataStore for Norconex

--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -3,3 +3,9 @@ norconex.name=Default
 norconex.start-urls=https://www.jettro.dev,https://www.jettro.dev/unknown.html
 norconex.elasticsearch-nodes=http://localhost:9200
 norconex.elasticsearch-index-name=norconex
+
+
+aws.use-local=true
+aws.region=eu-west-1
+aws.local-uri=http://localhost:8000
+aws.profile-name=local
