--- a/aws-fargate-ecs-cdk/package.json
+++ b/aws-fargate-ecs-cdk/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.100.0",
     "@aws-cdk/aws-ec2": "^1.98.0",
     "@aws-cdk/aws-ecs": "^1.98.0",
     "@aws-cdk/aws-ecs-patterns": "^1.98.0",
