IMprovements to the dynamodb stuff

--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -1,11 +1,23 @@
-norconex.max-depth=1
-norconex.name=Default
-norconex.start-urls=https://www.jettro.dev,https://www.jettro.dev/unknown.html
-norconex.elasticsearch-nodes=http://localhost:9200
+# Action to perform, can be START or CLEAN
+norconex.action=START
+# Name of the index to use to insert data, usually an alias pointing to the right index
 norconex.elasticsearch-index-name=norconex
+# Url of the nodes to connect to, can be a comma separated list of urls of all nodes
+norconex.elasticsearch-nodes=http://localhost:9200
+# max-depth is used by the crawler to determine the depth of the links to follow, zero means no links follow
+norconex.max-depth=1
+# Name of the Norconex Collector, used in some naming and logging
+norconex.name=Norconex
+# Comma separated list of start urls
+norconex.start-urls=https://www.jettro.dev,https://www.jettro.dev/unknown.html
 
-
+# When using the local DynamoDB, set this true, else use false and a well configured AWS CLI or production is assumed
 aws.use-local=true
+# Default region to use
 aws.region=eu-west-1
+# Change only if you have DynamoDB running on a different port locally
 aws.local-uri=http://localhost:8000
+# Might be used to use the right profile for CLI, not sure if it works
 aws.profile-name=local
+# Prefix used in the naming of all DynamoDB tables, also used to make it easier to clean up
+aws.table-prefix=SAAS-crawler
