--- a/aws-fargate-ecs-cdk/package.json
+++ b/aws-fargate-ecs-cdk/package.json
@@ -11,21 +11,27 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.98.0",
+    "@aws-cdk/assert": "1.101.0",
+    "@types/aws-lambda": "^8.10.76",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.101.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.98.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^1.100.0",
-    "@aws-cdk/aws-ec2": "^1.98.0",
-    "@aws-cdk/aws-ecs": "^1.98.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.98.0",
-    "@aws-cdk/core": "1.98.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.101.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.101.0",
+    "@aws-cdk/aws-dynamodb": "^1.101.0",
+    "@aws-cdk/aws-ec2": "^1.101.0",
+    "@aws-cdk/aws-ecs": "^1.101.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.101.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/core": "1.101.0",
+    "aws-lambda": "^1.0.6",
     "source-map-support": "^0.5.16"
   }
 }
