Add properties for delay

--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -1,18 +1,28 @@
 # Action to perform, can be START or CLEAN
-norconex.action=START
+norconex.action=CLEAN
 # Name of the index to use to insert data, usually an alias pointing to the right index
-norconex.elasticsearch-index-name=norconex
+norconex.elasticsearch-index-name=norconexjettrodev
 # Url of the nodes to connect to, can be a comma separated list of urls of all nodes
 norconex.elasticsearch-nodes=http://localhost:9200
 # max-depth is used by the crawler to determine the depth of the links to follow, zero means no links follow
 norconex.max-depth=1
 # Name of the Norconex Collector, used in some naming and logging
-norconex.name=Norconex
+norconex.name=Norconex-jettro
 # Comma separated list of start urls
 norconex.start-urls=https://www.jettro.dev,https://www.jettro.dev/unknown.html
+# Comma separated list of sitemap urls
+norconex.sitemap-urls=
+
+# Everything related to delays, much more advanced options are available in schedules, not possible here yet
+# default delay in milliseconds
+norconex.delay.default-delay=2000
+# If the robots.txt specifies a delay, ignore it (true) or not (false).
+norconex.delay.ignore-robots-crawl-delay=false
+# Sope for the delay: CRAWLER, SITE, THREAD
+norconex.delay.scope=CRAWLER
 
 # When using the local DynamoDB, set this true, else use false and a well configured AWS CLI or production is assumed
-aws.use-local=true
+aws.use-local=false
 # Default region to use
 aws.region=eu-west-1
 # Change only if you have DynamoDB running on a different port locally
@@ -20,4 +30,4 @@ aws.local-uri=http://localhost:8000
 # Might be used to use the right profile for CLI, not sure if it works
 aws.profile-name=local
 # Prefix used in the naming of all DynamoDB tables, also used to make it easier to clean up
-aws.table-prefix=SAAS-crawler
+aws.table-prefix=SAAS-crawler-jettro
