--- a/aws-es-gateway-lambda-request-response/package.json
+++ b/aws-es-gateway-lambda-request-response/package.json
@@ -11,20 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.92.0",
-    "@aws-cdk/aws-apigateway": "^1.93.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.92.0",
+    "aws-cdk": "1.103.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.93.0",
-    "@aws-cdk/aws-lambda": "^1.93.0",
-    "@aws-cdk/core": "1.92.0",
+    "@aws-cdk/assert": "1.103.0",
+    "@aws-cdk/aws-apigateway": "^1.103.0",
+    "@aws-cdk/aws-iam": "^1.103.0",
+    "@aws-cdk/aws-lambda": "^1.103.0",
+    "@aws-cdk/core": "1.103.0",
+    "elastic-builder": "^2.15.0",
     "source-map-support": "^0.5.16"
   }
 }
