--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Action to perform, can be START or CLEAN
-norconex.action=CLEAN
+norconex.action=START
 # Name of the index to use to insert data, usually an alias pointing to the right index
 norconex.elasticsearch-index-name=norconexjettrodev
 # Url of the nodes to connect to, can be a comma separated list of urls of all nodes
@@ -22,12 +22,17 @@ norconex.delay.ignore-robots-crawl-delay=false
 norconex.delay.scope=CRAWLER
 
 # When using the local DynamoDB, set this true, else use false and a well configured AWS CLI or production is assumed
-aws.use-local=false
+dynamodb.use-local=false
 # Default region to use
-aws.region=eu-west-1
+dynamodb.region=eu-west-1
 # Change only if you have DynamoDB running on a different port locally
-aws.local-uri=http://localhost:8000
+dynamodb.local-uri=http://localhost:8000
 # Might be used to use the right profile for CLI, not sure if it works
-aws.profile-name=local
+dynamodb.profile-name=local
 # Prefix used in the naming of all DynamoDB tables, also used to make it easier to clean up
-aws.table-prefix=SAAS-crawler-jettro
+dynamodb.table-prefix=SAAS-crawler-testjc
+
+# When using a topic to send status updates to, configure the parameters here
+
+# Name of the topic to send status info to, if there is not name, we send nothing.
+sns.status-update-topic-name=SearchConsoleJobStatusTopic
