--- a/norconex-java/pom.xml
+++ b/norconex-java/pom.xml
@@ -55,9 +55,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.norconex.collectors</groupId>
-            <artifactId>norconex-committer-elasticsearch</artifactId>
-            <version>5.0.0-SNAPSHOT</version>
+            <groupId>eu.luminis</groupId>
+            <artifactId>norconex-committer-opensearch</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
