--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Action to perform, can be START or CLEAN
-norconex.action=START
+# Action to perform, can be START or CLEAN or ALL
+norconex.action=CLEAN_START
 # Name of the index to use to insert data, usually an alias pointing to the right index
 norconex.elasticsearch-index-name=norconexjettrodev
 # Url of the nodes to connect to, can be a comma separated list of urls of all nodes
