Better messages to notification service

--- a/norconex-java/src/main/resources/application.properties
+++ b/norconex-java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Action to perform, can be START or CLEAN or ALL
+# Action to perform, can be START or CLEAN or CLEAN_START
 norconex.action=CLEAN_START
 # Name of the index to use to insert data, usually an alias pointing to the right index
 norconex.elasticsearch-index-name=norconexjettrodev
@@ -18,7 +18,7 @@ norconex.sitemap-urls=
 norconex.delay.default-delay=2000
 # If the robots.txt specifies a delay, ignore it (true) or not (false).
 norconex.delay.ignore-robots-crawl-delay=false
-# Sope for the delay: CRAWLER, SITE, THREAD
+# Scope for the delay: CRAWLER, SITE, THREAD
 norconex.delay.scope=CRAWLER
 
 # When using the local DynamoDB, set this true, else use false and a well configured AWS CLI or production is assumed
@@ -36,3 +36,5 @@ dynamodb.table-prefix=SAAS-crawler-testjc
 
 # Name of the topic to send status info to, if there is not name, we send nothing.
 sns.status-update-topic-name=SearchConsoleJobStatusTopic
+# name of the topic, in ideal world this should be unique per run and be provided when starting the run
+sns.message-group=norconexjettrodev
